Fix gaps, make visible text on options.

--- a/src/disruptor/static/styles/style.css
+++ b/src/disruptor/static/styles/style.css
@@ -49,7 +49,11 @@ body {
           transition: transform 0.3s, border-color 0.3s;
           box-sizing: border-box;
           margin: 5px; /* Reset margin */
+          text-align:center;
       }
+      /* .image-picker a:first-child{
+        margin-top: -20px;
+      } */
 
       .image-picker a:hover {
         transform: scale(1.05);
@@ -184,6 +188,7 @@ body {
         transform: translate(-50%, -50%);
         background-color: rgba(255, 255, 255, 0.8);
         padding: 10px;
+        font-weight: bold;
         border-radius: 5px;
         transition: opacity 0.3s;
         pointer-events: none;
@@ -194,7 +199,7 @@ body {
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
-          color: #ddd;
+          color: black;
           font-size: 25px;
           font-weight: bold;
           text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
@@ -235,7 +240,8 @@ body {
     @media (max-width: 768px) {
     .image-picker-2x2 {
         height: 750px;
-        grid-template-columns: 1fr; /* Switch to a single column */
+        grid-template-columns: 1fr;
+        width: 500px;
     }
 
     .image-picker a {
